--- a/index.html
+++ b/index.html
@@ -11,36 +11,38 @@
         <div class="content-space">
           <header>
             <div class="nav-menu">
-              <ul class="nav-menu-left">
-                <li class="nav-item">
-                  <a class="nav-link" href="nav.html">
-                    Home
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="nav.html">
-                    About us
-                  </a>
-                </li>
-              </ul>
-              <a class="logo" href="logo.html"></a>
-              <ul class="nav-menu-right">
-                <li class="nav-item">
-                  <a class="nav-link" href="nav.html">
-                    Menu
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="nav.html">
-                    Blog
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="nav.html">
-                    Contact
-                  </a>
-                </li>
-              </ul>
+              <nav class="nav-block">
+                <ul class="nav-menu-left">
+                  <li class="nav-item">
+                    <a class="nav-link" href="nav.html">
+                      Home
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="nav.html">
+                      About us
+                    </a>
+                  </li>
+                </ul>
+                <a class="logo" href="logo.html"></a>
+                <ul class="nav-menu-right">
+                  <li class="nav-item">
+                    <a class="nav-link" href="nav.html">
+                      Menu
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="nav.html">
+                      Blog
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="nav.html">
+                      Contact
+                    </a>
+                  </li>
+                </ul>
+              </nav>
             </div>
             <div class="welcome-block">
               <h1 class="welcome-title">
