add changes in all layout

--- a/index.html
+++ b/index.html
@@ -8,133 +8,139 @@
   </head>
   <body>
     <div class="wrapper">
-        <div class="content-space">
-          <header>
-            <div class="nav-menu">
-              <nav class="nav-block">
-                <ul class="nav-menu-left">
-                  <li class="nav-item">
-                    <a class="nav-link" href="nav.html">
-                      Home
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="nav.html">
-                      About us
-                    </a>
-                  </li>
-                </ul>
-                <a class="logo" href="logo.html"></a>
-                <ul class="nav-menu-right">
-                  <li class="nav-item">
-                    <a class="nav-link" href="nav.html">
-                      Menu
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="nav.html">
-                      Blog
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="nav.html">
-                      Contact
-                    </a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-            <div class="welcome-block">
-              <h1 class="welcome-title">
-                Welcome to Be Latte
-              </h1>
-              <p class="welcome-text">
-                Enjoy of a fresh new approach to coffee.
-                Proin gravida nibh vel velit. Auctor aliquet sollicitudin lorem quis.
-              </p>
-              <button class="see-menu-button">
-                SEE MENU
-              </button>
-            </div>
-          </header>
-          <div class="about-us-block">
-            <h2 class="block-title">
-            </h2>
-            <p class="about-us-text">
-            </p>
-            <div class="coffee-icon">
-            </div>
+      <div class="content-space">
+        <header>
+          <div class="nav-menu">
+            <nav class="nav-block">
+              <ul class="nav-menu-left">
+                <li class="nav-item">
+                  <a class="nav-link" href="nav.html">
+                    Home
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="nav.html">
+                    About us
+                  </a>
+                </li>
+              </ul>
+              <a class="logo" href="logo.html"></a>
+              <ul class="nav-menu-right">
+                <li class="nav-item">
+                  <a class="nav-link" href="nav.html">
+                    Menu
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="nav.html">
+                    Blog
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="nav.html">
+                    Contact
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
-          <div class="menu-block">
-            <h2 class="block-title">
-            </h2>
-            <ul class="menu-list">
-              <li class="menu-part coffee-menu">
-                <div class="menu-picture coffee-menu-picture">
-                  COFFEE
-                </div>
-                <table class="assortment">
-                  <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
-                  </tr>
-                  <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
-                  </tr>
-                  <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
-                  </tr>
-                  <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
-                  </tr>
+          <div class="welcome-block">
+            <h1 class="welcome-title">
+              Welcome to Be Latte
+            </h1>
+            <p class="welcome-text">
+              Enjoy of a fresh new approach to coffee.
+              Proin gravida nibh vel velit. Auctor aliquet sollicitudin lorem quis.
+            </p>
+            <button class="see-menu-button">
+              SEE MENU
+            </button>
+          </div>
+        </header>
+        <div class="about-us-block">
+          <h2 class="block-title">
+            Coffee never tasted so good!
+          </h2>
+          <p class="about-us-text">
+            Morbi accumsan ipsum velit.
+            Nam nec tellus a odio tincidunt auctor a ornare odio.
+            Sed non  mauris vitae erat consequat auctor eu in elit.
+            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+          </p>
+          <div class="coffee-icon">
+          </div>
+        </div>
+        <div class="menu-block">
+          <h2 class="block-title">
+            MENU
+          </h2>
+          <ul class="menu-list">
+            <li class="menu-section coffee-menu">
+              <div class="menu-picture coffee-menu-picture">
+                COFFEE
+              </div>
+              <table class="assortment">
+                <tr class="position">
+                  <td class="name">Latte</td>
+                  <td class="prise">$3.00</td>
+                </tr>
+                <tr class="position">
+                  <td class="name">Mocha</td>
+                  <td class="prise">$3.25</td>
+                </tr>
+                <tr class="position">
+                  <td class="name">Expresso</td>
+                  <td class="prise">$3.75</td>
+                </tr>
+                <tr class="position">
+                  <td class="name">Capuccino</td>
+                  <td class="prise">$3.00</td>
+                 </tr>
                 </table>
               </li>
-              <li class="menu-part tea-menu">
+              <li class="menu-section tea-menu">
                 <div class="menu-picture tea-menu-picture">
                   TEA
                 </div>
                 <table class="assortment">
                   <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
+                    <td class="name">Iced tea</td>
+                    <td class="prise">$2.75</td>
                   </tr>
                   <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
+                    <td class="name">Cold brew</td>
+                    <td class="prise">$3.25</td>
                   </tr>
                   <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
+                    <td class="name">Jasmine green</td>
+                    <td class="prise">$3.75</td>
                   </tr>
                   <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
+                    <td class="name">Peppermint Herbal</td>
+                    <td class="prise">$3.00</td>
                   </tr>
                 </table>
               </li>
-              <li class="menu-part desert-menu">
+              <li class="menu-section desert-menu">
                 <div class="menu-picture desert-menu-picture">
                   DESERT
                 </div>
                 <table class="assortment">
                   <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
+                    <td class="name">Tiramisu</td>
+                    <td class="prise">$3.00</td>
                   </tr>
                   <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
+                    <td class="name">Cheese cake</td>
+                    <td class="prise">$3.25</td>
                   </tr>
                   <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
+                    <td class="name">Black forest</td>
+                    <td class="prise">$3.75</td>
                   </tr>
                   <tr class="position">
-                    <td class="name"></td>
-                    <td class="prise"></td>
+                    <td class="name">Brownie</td>
+                    <td class="prise">$3.00</td>
                   </tr>
                 </table>
               </li>
@@ -147,6 +153,7 @@
           </div>
           <div class="testimonials-blok">
             <h2 class="block-title">
+              TESTIMONIALS
             </h2>
             <div class="testimonial-block">
               <div class="left-testimonial-block">
@@ -155,16 +162,18 @@
                 <span class="testimonial-number">.01</span>
                 <div class="people-block">
                   <div class="human-photo"></div>
-                  <span class="human-name"></span>
+                  <span class="human-name">Chris Parker</span>
+                  <p class="testimonial">
+                    Nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris accumsan.
+                  </p>
+                  <ul class="pagination-drops">
+                    <li class="drop"></li>
+                    <li class="drop"></li>
+                    <li class="drop"></li>
+                  </ul>
                 </div>
-                <p class="testimonial"></p>
-                <ul class="pagination-drops">
-                  <li class="drop"></li>
-                  <li class="drop"></li>
-                  <li class="drop"></li>
-                </ul>
                 <span class="quotes">
-                  ''
+                  <i class="fas fa-quote-right"></i>
                 </span>
               </div>
             </div>
@@ -173,6 +182,7 @@
           </div>
           <div class="location-block">
             <h2 class="block-title">
+              LOCATION
             </h2>
             <div class="location">
               <div class="left-location-block">
@@ -181,7 +191,9 @@
                     <span class="location-name">
                       LOCATION
                     </span>
-                    <p class="location-description"></p>
+                    <p class="location-description">
+                      Visit us at St. Thomas street 21st, suite 110, Santa Monica, California.
+                    </p>
                   </li>
                   <li class="location-item hours">
                     <span class="location-name">
@@ -189,12 +201,12 @@
                     </span>
                     <table class="location-description hours-table">
                       <tr>
-                        <td class="day"></td>
-                        <td class="time"></td>
+                        <td class="day">Mon - Sat:</td>
+                        <td class="time">7am - 8pm</td>
                       </tr>
                       <tr>
-                        <td class="day"></td>
-                        <td class="time"></td>
+                        <td class="day">Sunday</td>
+                        <td class="time">7am - 5pm</td>
                       </tr>
                     </table>
                   </li>
@@ -204,8 +216,8 @@
                     </span>
                     <table class="location-description hours-table">
                       <tr>
-                        <td class="day"></td>
-                        <td class="time"></td>
+                        <td class="day">Mon - Fri:</td>
+                        <td class="time">4am - 6pm</td>
                       </tr>
                     </table>
                   </li>
@@ -218,11 +230,24 @@
         </div>
         <footer>
           <ul class="social-networks">
-            <li class="network"></li>
-            <li class="network"></li>
-            <li class="network"></li>
+            <li class="network">
+              <a class="network-link" href="network.html">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="network">
+              <a class="network-link" href="network.html">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="network">
+              <a class="network-link" href="network.html">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
           </ul>
           <p class="footer-adress">
+            St. Thomas street 21st, Suite 110, Santa Monica, California
           </p>
         </footer>
       </div>
