--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   </a>
                 </li>
               </ul>
-              <a class="logo" href="logo.html"></a>
+              <a class="logo" href="#"></a>
               <ul class="nav-menu-right">
                 <li class="nav-item">
                   <a class="nav-link" href="nav.html">
@@ -52,9 +52,11 @@
               Enjoy of a fresh new approach to coffee.
               Proin gravida nibh vel velit. Auctor aliquet sollicitudin lorem quis.
             </p>
-            <button class="see-menu-button">
-              SEE MENU
-            </button>
+            <a href="#menu">
+              <button class="see-menu-button">
+                SEE MENU
+              </button>
+            </a>
           </div>
         </header>
         <div class="about-us-block">
@@ -70,12 +72,13 @@
           <div class="coffee-icon">
           </div>
         </div>
+        <a name="menu"></a>
         <div class="menu-block">
           <h2 class="block-title">
             MENU
           </h2>
           <ul class="menu-list">
-            <li class="menu-section coffee-menu">
+            <li class="menu-section">
               <div class="menu-picture coffee-menu-picture">
                 COFFEE
               </div>
@@ -98,7 +101,7 @@
                  </tr>
                 </table>
               </li>
-              <li class="menu-section tea-menu">
+              <li class="menu-section">
                 <div class="menu-picture tea-menu-picture">
                   TEA
                 </div>
@@ -121,7 +124,7 @@
                   </tr>
                 </table>
               </li>
-              <li class="menu-section desert-menu">
+              <li class="menu-section">
                 <div class="menu-picture desert-menu-picture">
                   DESERT
                 </div>
@@ -167,9 +170,9 @@
                     Nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris accumsan.
                   </p>
                   <ul class="pagination-drops">
-                    <li class="drop"></li>
-                    <li class="drop"></li>
-                    <li class="drop"></li>
+                    <li class="drop drop-background"></li>
+                    <li class="drop drop-background"></li>
+                    <li class="drop drop-background"></li>
                   </ul>
                 </div>
                 <span class="quotes">
@@ -187,7 +190,7 @@
             <div class="location">
               <div class="left-location-block">
                 <ul class="full-lacation">
-                  <li class="location-item adress">
+                  <li class="location-item">
                     <span class="location-name">
                       LOCATION
                     </span>
@@ -195,11 +198,11 @@
                       Visit us at St. Thomas street 21st, suite 110, Santa Monica, California.
                     </p>
                   </li>
-                  <li class="location-item hours">
+                  <li class="location-item">
                     <span class="location-name">
                       HOURS
                     </span>
-                    <table class="location-description hours-table">
+                    <table class="location-description">
                       <tr>
                         <td class="day">Mon - Sat:</td>
                         <td class="time">7am - 8pm</td>
