--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                     Nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris accumsan.
                   </p>
                   <ul class="pagination-drops">
-                    <li class="drop drop-background" data-attr-id="1"></li>
-                    <li class="drop drop-background" data-attr-id="2"></li>
-                    <li class="drop drop-background" data-attr-id="3"></li>
+                    <li class="drop" data-attr-id="1"></li>
+                    <li class="drop" data-attr-id="2"></li>
+                    <li class="drop" data-attr-id="3"></li>
                   </ul>
                 </div>
                 <span class="quotes">
