add changing of human photos

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <div class="right-testimonial-block">
                 <span class="testimonial-number">.01</span>
                 <div class="people-block">
-                  <div class="human-photo"></div>
+                  <div class="human-photo human-photo-1"></div>
                   <span class="human-name">Chris Parker</span>
                   <p class="testimonial">
                     Nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris accumsan.
