add fourth testimonial

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                     <li class="drop" data-attr-id="1"></li>
                     <li class="drop" data-attr-id="2"></li>
                     <li class="drop" data-attr-id="3"></li>
+                    <li class="drop" data-attr-id="4"></li>
                   </ul>
                 </div>
                 <span class="quotes">
