add menu positions

--- a/index.html
+++ b/index.html
@@ -188,18 +188,18 @@
       </div>
       <template id="menu-template">
         <li class="menu-section">
-          <div class="menu-picture coffee-menu-picture">
-            COFFEE
+          <div class="menu-picture coffee-menu-picture" id="menu-section-title">
+            coffee
           </div>
-          <table class="assortment">
-            
-            <tr class="position">
-              <td class="name">Latte</td>
-              <td class="prise">$3.00</td>
-            </tr>
-
-            </table>
-          </li>
+          <table class="assortment" id="assortment-id">
+          </table>
+        </li>
+      </template>
+      <template id="position-template">
+        <tr class="position">
+          <td class="name">Latte</td>
+          <td class="prise">$3.00</td>
+        </tr>
       </template>
       <script src="scripts/script.js"></script>
       <script src="scripts/menu.js"></script>
