fixed menu positions

--- a/index.html
+++ b/index.html
@@ -79,128 +79,129 @@
           </h2>
           <ul class="menu-list" id="menu-list-id">
           </ul>
-            <button class="see-full-menu">
-              SEE FULL MENU
-            </button>
-            <div class="coffee-icon">
-            </div>
+          <button class="see-full-menu">
+            SEE FULL MENU
+          </button>
+          <div class="coffee-icon">
           </div>
-          <div class="testimonials-blok">
-            <h2 class="block-title">
-              TESTIMONIALS
-            </h2>
-            <div class="testimonial-block">
-              <div class="left-testimonial-block">
-              </div>
-              <div class="right-testimonial-block">
-                <span class="testimonial-number">.01</span>
-                <div class="people-block">
-                  <div class="human-photo human-photo-1"></div>
-                  <span class="human-name">Chris Parker</span>
-                  <p class="testimonial">
-                    Nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris accumsan.
-                  </p>
-                  <ul class="pagination-drops">
-                    <li class="drop" data-attr-id="1"></li>
-                    <li class="drop" data-attr-id="2"></li>
-                    <li class="drop" data-attr-id="3"></li>
-                    <li class="drop" data-attr-id="4"></li>
-                  </ul>
-                </div>
-                <span class="quotes">
-                  <i class="fas fa-quote-right"></i>
-                </span>
-              </div>
+        </div>
+        <div class="testimonials-blok">
+          <h2 class="block-title">
+            TESTIMONIALS
+          </h2>
+          <div class="testimonial-block">
+            <div class="left-testimonial-block">
             </div>
-            <div class="coffee-icon">
-            </div>
-          </div>
-          <div class="location-block">
-            <h2 class="block-title">
-              LOCATION
-            </h2>
-            <div class="location">
-              <div class="left-location-block">
-                <ul class="full-lacation">
-                  <li class="location-item">
-                    <span class="location-name">
-                      LOCATION
-                    </span>
-                    <p class="location-description">
-                      Visit us at St. Thomas street 21st, suite 110, Santa Monica, California.
-                    </p>
-                  </li>
-                  <li class="location-item">
-                    <span class="location-name">
-                      HOURS
-                    </span>
-                    <table class="location-description">
-                      <tr>
-                        <td class="day">Mon - Sat:</td>
-                        <td class="time">7am - 8pm</td>
-                      </tr>
-                      <tr>
-                        <td class="day">Sunday</td>
-                        <td class="time">7am - 5pm</td>
-                      </tr>
-                    </table>
-                  </li>
-                  <li class="location-item happy-hour">
-                    <span class="location-name">
-                      HAPPY-HOUR
-                    </span>
-                    <table class="location-description hours-table">
-                      <tr>
-                        <td class="day">Mon - Fri:</td>
-                        <td class="time">4am - 6pm</td>
-                      </tr>
-                    </table>
-                  </li>
+            <div class="right-testimonial-block">
+              <span class="testimonial-number">.01</span>
+              <div class="people-block">
+                <div class="human-photo human-photo-1"></div>
+                <span class="human-name">Chris Parker</span>
+                <p class="testimonial">
+                  Nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris accumsan.
+                </p>
+                <ul class="pagination-drops">
+                  <li class="drop" data-attr-id="1"></li>
+                  <li class="drop" data-attr-id="2"></li>
+                  <li class="drop" data-attr-id="3"></li>
+                  <li class="drop" data-attr-id="4"></li>
                 </ul>
               </div>
-              <div class="right-location-block">
-              </div>
+              <span class="quotes">
+                <i class="fas fa-quote-right"></i>
+              </span>
+            </div>
+          </div>
+          <div class="coffee-icon">
+          </div>
+        </div>
+        <div class="location-block">
+          <h2 class="block-title">
+            LOCATION
+          </h2>
+          <div class="location">
+            <div class="left-location-block">
+              <ul class="full-lacation">
+                <li class="location-item">
+                  <span class="location-name">
+                    LOCATION
+                  </span>
+                  <p class="location-description">
+                    Visit us at St. Thomas street 21st, suite 110, Santa Monica, California.
+                  </p>
+                </li>
+                <li class="location-item">
+                  <span class="location-name">
+                    HOURS
+                  </span>
+                  <table class="location-description">
+                    <tr>
+                      <td class="day">Mon - Sat:</td>
+                      <td class="time">7am - 8pm</td>
+                    </tr>
+                    <tr>
+                      <td class="day">Sunday</td>
+                      <td class="time">7am - 5pm</td>
+                    </tr>
+                  </table>
+                </li>
+                <li class="location-item happy-hour">
+                  <span class="location-name">
+                    HAPPY-HOUR
+                  </span>
+                  <table class="location-description hours-table">
+                    <tr>
+                      <td class="day">Mon - Fri:</td>
+                      <td class="time">4am - 6pm</td>
+                    </tr>
+                  </table>
+                </li>
+              </ul>
+            </div>
+            <div class="right-location-block">
             </div>
           </div>
         </div>
-        <footer>
-          <ul class="social-networks">
-            <li class="network">
-              <a class="network-link" href="network.html">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="network">
-              <a class="network-link" href="network.html">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="network">
-              <a class="network-link" href="network.html">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </li>
-          </ul>
-          <p class="footer-adress">
-            St. Thomas street 21st, Suite 110, Santa Monica, California
-          </p>
-        </footer>
       </div>
-      <template id="menu-template">
-        <li class="menu-section">
-          <div class="menu-picture coffee-menu-picture" id="menu-section-title">
-            coffee
-          </div>
-          <table class="assortment" id="assortment-id">
-          </table>
-        </li>
-      </template>
-      <template id="position-template">
-        <tr class="position">
-          <td class="name">Latte</td>
-          <td class="prise">$3.00</td>
-        </tr>
-      </template>
-      <script src="scripts/script.js"></script>
-      <script src="scripts/menu.js"></script>
-    </body>
+      <footer>
+        <ul class="social-networks">
+          <li class="network">
+            <a class="network-link" href="network.html">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li class="network">
+            <a class="network-link" href="network.html">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="network">
+            <a class="network-link" href="network.html">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+        <p class="footer-adress">
+          St. Thomas street 21st, Suite 110, Santa Monica, California
+        </p>
+      </footer>
+    </div>
+    <template id="menu-template">
+      <li class="menu-section">
+        <div class="menu-picture" id="menu-section-title">
+          {title}
+        </div>
+        <table class="assortment" id="assortment-id">
+        </table>
+      </li>
+    </template>
+    <template id="position-template">
+      <tr class="position">
+        <td class="name">{name}</td>
+        <td class="prise">{cost}</td>
+      </tr>
+    </template>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/menu.js"></script>
+  </body>
+</html>
